# Log-File-Analyzer-for-Security-Monitoring

./: .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  conanfile.py  readmi.md  server_logs.txt
include/: LogAnalyzer.h
src/: LogAnalyzer.cpp  main.cpp
